2004-11-10  Christian Stimming  <stimming@tuhh.de>

	* src/engine/gnc-commodity.c, src/engine/iso-4217-currencies.scm:
	Change currency mnemonic for "New Israeli Shekel" from "ILS" to
	"NIS". Fixes #152755.

2004-11-01  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/dialog-find-transactions.c: Mark search criteria for
	translation -- somehow this had been missed all the time.

2004-10-31  Derek Atkins  <derek@ihtfp.com>

	* Neil Williams' QOF Book Merge Patch #2.

	* src/engine/gnc-pricedb.c:
	  Phil Longstaff's patch to prevent duplicate pricedb entries.

	Heath Martin's x86_64 patch:
	* macros/autogen.sh:
	  change "head -1" to "head -n 1"
	* src/engine/gnc-numeric.[ch]:
	  change string_to_gnc_numeric() to return gboolean.
	* src/app-utils/gnc-exp-parser.c:
	* src/backend/file/sixtp-dom-parsers.c:
	  use new string_to_gnc_numeric() API
	* src/engine/gnc-lot.c:
	  64-bit safe for x86_64
	* src/gnome/dialog-scheduledxaction.c:
	* src/gnome/dialog-sxsincelast.c:
	* src/gnome/druid-loan.c:
	* src/gnome-utils/dialog-account.c:
	* src/gnome-utils/gnc-query-list.c:
	* src/import-export/import-match-map.c:
	  use GPOINTER_TO_INT and GINT_TO_POINTER macros to be 64-bit safe.

	James Strandboge's "Easy Invoice" patch:
	* src/business/business-reports/Makefile.am:
	* src/business/business-reports/business-reports.scm:
	* src/business/business-reports/easy-invoice.scm:
	  add "easy invoice" code.
	* src/business/business-utils/business-prefs.scm:
	* src/business/business-utils/business-utils.scm:
	  add preferences for the business ID, used in the easy invoice.
	* src/report/stylesheets/Makefile.am:
	* src/report/stylesheets/stylesheets.scm:
	* src/report/stylesheets/stylesheet-easy.scm:
	  add "easy stylesheet" code.

	* src/engine/gw-engine-spec.scm:
	  Fix parameter order to match C file (thanks for Erwin Rieger).

2004-10-30  Christian Stimming  <stimming@tuhh.de>

	* doc/README.HBCI: Updated HBCI readme.
	