@@ -1,3 +1,9 @@
+2004-11-13  Christian Stimming  <stimming@tuhh.de>
+
+	* src/report/report-gnome/window-report.c,
+	src/scm/main-window.scm: Identified and fixed several places with
+	untranslated strings.
+
 2004-11-10  Christian Stimming  <stimming@tuhh.de>
 
 	* src/engine/gnc-commodity.c, src/engine/iso-4217-currencies.scm:
